fixed spacing and background coloring using flexbox

--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,70 @@
 .Title {
+  display:flex;
+  flex-direction: column;
+  align-items: stretch;
   text-align: center;
-  background-color: lime;
-}
-
-.Instructions-header{
-  text-align: center;
-  background-color: lime;
-  height: 50px;
-  color: purple;
-  padding: 20px;
-  font-size: 140%;
-
-}
-
-.Instructions-body{
-  background-color: lime;
-  padding: 20px;
-  height: 400px;
-  font-size: 100%;
-  color: purple;
-
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: lime;
-  height: 150px;
-  padding: 20px;
-  color: red;
+  background-color: #00ffff;
+  padding-top:80px;
+  padding-bottom: 300px;
 }
 
 .App-intro {
   font-size: 600%;
   text-align: center;
-  background-color: lime;
-  color: red;
+  margin-top: 0;
+  background-color: #00ffff;
+  color: #662e9e;
+}
 
+.Instructions{
+  display:flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  background-color: #00ffff;
+  height:550px;
+  padding-bottom:20px;
+}
+
+.Instructions-header{
+  margin-top:0;
+  margin-bottom:0;
+  text-align: center;
+  background-color: #00ffff;
+  color: #662e9e;
+  padding: 40px;
+  font-size: 140%;
+  font-family: Times;
+}
+
+.Instructions-body{
+  background-color: #00ffff;
+  flex-direction:column;
+  align-items:center;
+  padding: 20px;
+  height: 200px;
+  font-size: 100%;
+  font-family: "Trebuchet MS";
+  color: #662e9e;
+}
+
+.Student{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: stretch;
+  padding-top:40px;
+  height: 568px;
+  background-color: #00ffff;
+}
+
+.Student-Profile{
+  padding-top: 50px;
+  padding-bottom: 90px;
+  text-align:center;
+  margin-right:10px;
+  margin-left:10px;
+  background-color: #00ffff;
 }
 
 p {
@@ -47,10 +72,12 @@ p {
 }
 
 button{
-  font-size:100%;
-  text-align: center;
-  background-color: lime;
+  align-self: center;
+  margin-bottom:40px;
+  background-color: #00ffff;
+}
 
-
+img{
+  max-width: 50%;
 }
 
